--- a/views/main.erb
+++ b/views/main.erb
@@ -13,7 +13,7 @@
 
   <title>Hello from OpenShift v4!</title>
 </head>
-<body>
+<body bgcolor="yellow">
   <div class="page-header" align=center>
     <h1> Welcome to an OpenShift v4 Demo App! </h1>
   </div>
