--- a/views/main.erb
+++ b/views/main.erb
@@ -13,9 +13,9 @@
 
   <title>Hello from OpenShift v4!</title>
 </head>
-<body bgcolor="yellow">
+<body>
   <div class="page-header" align=center>
-    <h1> Welcome to an OpenShift v4 Demo App! </h1>
+    <h1><i> Welcome to an OpenShift v4 Demo App! </i></h1>
   </div>
 
   <% if ENV["DATABASE_SERVICE_HOST"].nil? && ENV["DATABASE_TEST_SERVICE_HOST"].nil? %>
